--- a/index1.html
+++ b/index1.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
 <html>
 <head>
-	<title>My Website</title>
+	<title>Purchasing Website</title>
 </head>
 <body>
-	<h1>Welcome to My Website</h1>
-	<p>This is a paragraph of text on my website.</p>
+	<h1>Welcome to Refund Rangers</h1>
+	<p>Here you can make purchases for gold coins for your game and refund purchases.</p>
 </body>
+
+<img src="goldcoin.jpg" width=500/>
+
 </html>
