--- a/index1.html
+++ b/index1.html
@@ -5,8 +5,6 @@
 <body>
 	<h1>Welcome to Refund Rangers</h1>
 	<p>Here you can make purchases for gold coins for your game and refund purchases.</p>
+	<img src="goldcoin.jpg" width="500"/>
 </body>
-
-<img src="goldcoin.jpg" width=500/>
-
 </html>
