--- a/index1.html
+++ b/index1.html
@@ -1,10 +1,26 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Purchasing Website</title>
+	<style>
+		.button {
+			display: inline-block;
+			background-color: gold;
+			color: white;
+			padding: 10px;
+			border-radius: 5px;
+			text-decoration: none;
+		}
+		.button:hover {
+			background-color: yellow;
+		}
+	</style>
 </head>
 <body>
 	<h1>Welcome to Refund Rangers</h1>
 	<p>Here you can make purchases for gold coins for your game and refund purchases.</p>
-	<img src="goldcoin.jpg" width="500"/>
+	<a href="https://classprojectrefundrangers2.s3.us-east-2.amazonaws.com/index2.html" class="button">
+		<img src="goldcoin.jpg" width="500"/>
+	</a>
 </body>
 </html>
