--- a/index1.html
+++ b/index1.html
@@ -25,5 +25,9 @@
 	<a href="https://classprojectrefundrangers2.s3.us-east-2.amazonaws.com/index2.html" class="button">
 		<img src="goldcoin.jpg" width="500"/>
 	</a>
+	<p>Made a mistake and need to request a refund? Go here.</p>
+    <a href="https://classprojectrefundrangers3.s3.us-east-2.amazonaws.com/refund1.html" class="button">
+		<img src="refundbutton.jpeg" width="500"/>
+	</a>
 </body>
 </html>
