--- a/webpage1/index1.html
+++ b/webpage1/index1.html
@@ -3,6 +3,11 @@
 <head>
 	<title>Purchasing Website</title>
 	<style>
+		body {
+			background-image: url("backgroundfile.jpg");
+			background-size: cover;
+			background-repeat: no-repeat;
+		}
 		.button {
 			display: inline-block;
 			background-color: gold;
@@ -21,11 +26,11 @@
 </head>
 <body>
 	<h1>Welcome to Refund Rangers</h1>
-	<p>Here you can make purchases for gold coins for your game and refund purchases.</p>
+	<p><strong>Here you can make purchases for gold coins for your game and refund purchases.</strong></p>
 	<a href="https://classprojectrefundrangers2.s3.us-east-2.amazonaws.com/index2.html" class="button">
 		<img src="goldcoin.jpg" width="500"/>
 	</a>
-	<p>Made a mistake and need to request a refund? Go here.</p>
+	<p><strong>Made a mistake and need to request a refund? Go here.</strong></p>
     <a href="https://classprojectrefundrangers3.s3.us-east-2.amazonaws.com/refund1.html" class="button">
 		<img src="refundbutton.jpeg" width="500"/>
 	</a>
