--- a/webpage2/index2.html
+++ b/webpage2/index2.html
@@ -14,6 +14,22 @@
 <body>
 	<h1>Purchase coins here for your game.</h1>
 	<p>Here you can make purchases for gold coins for your game.</p>
+	<form action="process.php" method="post">
+		<label for="fname">First Name:</label>
+		<input type="text" id="fname" name="fname" required><br><br>
+		<label for="lname">Last Name:</label>
+		<input type="text" id="lname" name="lname" required><br><br>
+		<label for="zipcode">Billing Zip Code:</label>
+		<input type="text" id="zipcode" name="zipcode" pattern="[0-9]{5}" required><br><br>
+		<label for="coins">Select the number of coins:</label>
+		<select id="coins" name="coins">
+			<option value="10">10 coins for $1.99</option>
+			<option value="100">100 coins for $19.99</option>
+			<option value="1000">1000 coins for $199.99</option>
+		</select><br><br>
+		<input type="submit" value="Submit">
+	</form>
+    <p>Options</p>
 	<ul>
 		<li>10 coins for $1.99</li>
 		<li>100 coins for $19.99</li>
